--- a/TuringMachineRunner/TuringMachineRunner/MainWindow.xaml
+++ b/TuringMachineRunner/TuringMachineRunner/MainWindow.xaml
@@ -13,11 +13,35 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Label Margin="6,6,6,0" Content="Initial input" FontWeight="Bold" />
-        <TextBox Grid.Row="1" HorizontalAlignment="Stretch" Height="23" Margin="10,0,10,10" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Label Grid.Row="2" Margin="6,6,6,0" Content="Turing program" FontWeight="Bold" />
-        <TextBox Grid.Row="3" HorizontalAlignment="Stretch" Height="Auto" TextWrapping="WrapWithOverflow" Margin="10,0,10,10" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch"/>
-        <Button Grid.Row="4" x:Name="RunButton" Content="Run" HorizontalAlignment="Right" Padding="10,5" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Label Grid.ColumnSpan="2" Margin="6,6,6,0" Content="Initial input" FontWeight="Bold" />
+        <TextBox Grid.ColumnSpan="2" Name="Input" Grid.Row="1" HorizontalAlignment="Stretch" Height="23" Margin="10,0,10,10" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+        <Label Grid.ColumnSpan="2" Grid.Row="2" Margin="6,6,6,0" Content="Turing program" FontWeight="Bold" />
+        <TextBox Grid.ColumnSpan="2" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Auto" Name="InputProgram" Grid.Row="3" HorizontalAlignment="Stretch" Height="Auto" TextWrapping="WrapWithOverflow" Margin="10,0,10,10" Text="" VerticalAlignment="Stretch"/>
+        <Button Grid.Column="1" Margin="10" Grid.Row="4" x:Name="RunButton" Content="Run" HorizontalAlignment="Right" Padding="10,5" />
+        <Slider Grid.Column="0" Name="Delay" Grid.Row="4" Margin="10" VerticalAlignment="Center" Maximum="5000" Minimum="1" />
+        <Grid Grid.ColumnSpan="2" Grid.Row="5" Name="OutputGrid" Visibility="Collapsed">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Margin="6,6,6,0" Content="Output" FontWeight="Bold" />
+            <TextBox Margin="10,0,10,10" Grid.Row="1" AcceptsReturn="True" Name="Result" TextWrapping="Wrap" />
+            <Grid Grid.Column="1" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
