--- a/TuringMachineRunner/TuringMachineRunner/MainWindow.xaml
+++ b/TuringMachineRunner/TuringMachineRunner/MainWindow.xaml
@@ -35,12 +35,23 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Label Grid.Row="0" Margin="6,6,6,0" Content="Output" FontWeight="Bold" />
-            <TextBox Margin="10,0,10,10" Grid.Row="1" AcceptsReturn="True" Name="Result" TextWrapping="Wrap" />
+            <TextBox Height="Auto" VerticalAlignment="Stretch" Margin="10,0,10,10" Grid.Row="1" AcceptsReturn="True" Name="Result" TextWrapping="Wrap" />
             <Grid Grid.Column="1" Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Margin="0,0,10,3" Grid.Row="0" Text="States" />
+                <TextBlock Margin="0,3,10,3" Grid.Row="1" Text="Operations executed" />
+                <TextBlock Margin="0,3,10,10" Grid.Row="2" Text="Elapsed time" />
+                <TextBlock Margin="10,0,10,3" FontWeight="Bold" Name="StatesCount" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Text="0" />
+                <TextBlock Margin="10,3,10,3" FontWeight="Bold" Name="OperationsCount" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" Text="0" />
+                <TextBlock Margin="10,3,10,10" FontWeight="Bold" Name="ElapsedTime" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="2" Text="0 s" />
             </Grid>
         </Grid>
     </Grid>
